# krew-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  config.example.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: release.yml
.krew/: settings.toml
crates/krew-cli/: Cargo.toml
crates/krew-cli/src/: app.rs  completion.rs  custom_terminal.rs  main.rs  render.rs  textarea.rs  update_check.rs
crates/krew-cli/src/app/: agent_display.rs  commands.rs  input.rs  message.rs  mod.rs  paste_burst.rs  persistence.rs  state.rs
crates/krew-cli/src/app/approval/: mod.rs  overlay.rs
crates/krew-cli/src/config_cmd/: add.rs  del.rs  doctor.rs  help.rs  init.rs  list.rs  mod.rs
crates/krew-cli/src/custom_terminal/: ansi.rs  frame.rs  mod.rs  terminal.rs
crates/krew-cli/src/frame_scheduler/: mod.rs  rate_limiter.rs  scheduler.rs
crates/krew-cli/src/prompt_mode/: mod.rs  tests.rs
crates/krew-cli/src/render/: color.rs  diff_render.rs  header.rs  highlight.rs  markdown.rs  messages.rs  mod.rs  popup.rs  terminal_palette.rs  viewport.rs
crates/krew-cli/src/streaming/: chunking.rs  commit_tick.rs  markdown_stream.rs  mod.rs
crates/krew-cli/tests/: cli_config_test.rs  config_help_test.rs  doctor_test.rs
crates/krew-config/: Cargo.toml
crates/krew-config/src/: defaults.rs  instructions.rs  lib.rs  raw.rs  writer.rs
crates/krew-config/tests/: config_test.rs  instructions_test.rs  raw_config_test.rs  writer_tests.rs
crates/krew-core/: Cargo.toml
crates/krew-core/src/: agent.rs  command.rs  compact.rs  discovery.rs  dream.rs  event.rs  lib.rs  memory.rs  message.rs  persistence.rs  process_stats.rs  router.rs  session.rs
crates/krew-core/src/agent/: agent_loop.rs  approval.rs  init.rs  mod.rs  prepare.rs  prune.rs
crates/krew-core/src/custom_command/: discovery.rs  mod.rs  parser.rs  preprocessor.rs
crates/krew-core/src/skill/: discovery.rs  mod.rs  types.rs
crates/krew-core/src/sub_agent/: discovery.rs  mod.rs  run_agent_tool.rs  types.rs
crates/krew-core/src/task/: mod.rs  types.rs
crates/krew-core/tests/: agent_test.rs  command_test.rs  custom_command_test.rs  discovery_test.rs  dream_test.rs  persistence_test.rs  process_stats_test.rs  router_test.rs  sub_agent_test.rs  task_test.rs
crates/krew-llm/: Cargo.toml
crates/krew-llm/src/: anthropic.rs  common.rs  google.rs  lib.rs  list_models.rs  openai_chat.rs  openai_compatible.rs  openai_responses.rs  types.rs  vertex_anthropic.rs
crates/krew-llm/tests/: openai_chat_test.rs
crates/krew-storage/: Cargo.toml
crates/krew-storage/src/: history_file.rs  lib.rs  session_file.rs
crates/krew-storage/tests/: history_file_test.rs  session_file_test.rs
crates/krew-tools/: Cargo.toml
crates/krew-tools/src/: lib.rs  mcp.rs
crates/krew-tools/src/builtin/: activate_skill.rs  edit_file.rs  fetch_url.rs  glob.rs  grep.rs  mod.rs  read_file.rs  shell.rs  shell_parse.rs  write_file.rs
crates/krew-tools/src/mcp/: client.rs  handler.rs  manager.rs  mod.rs  tests.rs
crates/krew-tools/tests/: edit_file_test.rs  fetch_url_test.rs  glob_test.rs  grep_test.rs  mcp_test.rs  read_file_test.rs  shell_parse_test.rs  shell_test.rs  write_file_test.rs
docs/: MANUAL.md  MANUAL_CN.md  PDD.md  PI_MULTI_AGENT_EXTENSION.md  TDD.md  WASM_PLUGINS_PLAN.md  dev_plan.md  optimize_tool_calls_for_context_windows.md  optimize_tool_calls_for_context_windows_cn.md
docs/phases/: phase-01-tui-echo.md  phase-02-config.md  phase-03-input-commands.md  phase-04-openai-chat.md  phase-05-more-providers.md  phase-06-multi-agent.md  phase-07-session-persistence.md  phase-08-tools-readonly.md  phase-09-tools-write-approval.md  phase-10-mcp.md  phase-11-compact-tokens.md  phase-12-interaction-polish.md  phase-13-release.md
npm/krew/: package.json
npm/krew-darwin-arm64/: package.json
npm/krew-darwin-x64/: package.json
npm/krew-linux-arm64/: package.json
npm/krew-linux-x64/: package.json
npm/krew-win32-x64/: package.json
openspec/changes/adaptive-thinking-effort/: tasks.md
openspec/changes/add-sub-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-vertex-anthropic-provider/: design.md  tasks.md
openspec/changes/agent-dream/: design.md  proposal.md  tasks.md
openspec/changes/agent-skills-support/: tasks.md
openspec/changes/custom-slash-commands/: design.md  tasks.md
openspec/specs/agent-display/: spec.md
openspec/specs/agent-loop/: spec.md
openspec/specs/agent-loop-tool-calls/: spec.md
openspec/specs/agent-to-agent-routing/: spec.md
openspec/specs/anthropic-client/: spec.md
openspec/specs/approval-tui/: spec.md
openspec/specs/builtin-tools-readonly/: spec.md
openspec/specs/ci-build/: spec.md
openspec/specs/cli-args/: spec.md
openspec/specs/compact/: spec.md
openspec/specs/completion-popup/: spec.md
openspec/specs/config-file-writer/: spec.md
openspec/specs/config-help-command/: spec.md
openspec/specs/config-loading/: spec.md
openspec/specs/config-types/: spec.md
openspec/specs/config-validation/: spec.md
openspec/specs/config-wizard-crud/: spec.md
openspec/specs/config-wizard-doctor/: spec.md
openspec/specs/config-wizard-init/: spec.md
openspec/specs/custom-commands/: spec.md
openspec/specs/dream-command/: spec.md
openspec/specs/edit-file-tool/: spec.md
openspec/specs/fetch-url/: spec.md
openspec/specs/google-client/: spec.md
openspec/specs/input-history-persistence/: spec.md
openspec/specs/input-routing/: spec.md
openspec/specs/language-setting/: spec.md
openspec/specs/llm-list-models/: spec.md
openspec/specs/logging/: spec.md
openspec/specs/markdown-render/: spec.md
openspec/specs/mcp-client/: spec.md
openspec/specs/mcp-tool-integration/: spec.md
openspec/specs/message-types/: spec.md
openspec/specs/multi-agent-dispatch/: spec.md
openspec/specs/npm-distribution/: spec.md
openspec/specs/openai-chat-client/: spec.md
openspec/specs/openai-responses-client/: spec.md
openspec/specs/pending-message-display/: spec.md
scripts/: npm-publish.sh  prepare-npm.sh
xd-spec/: config.yaml
(+315 files in other folders)
