[package]
name = "krew-cli"
version = "0.12.1"
edition = "2024"

[[bin]]
name = "krew"
path = "src/main.rs"

[dependencies]
krew-core = { workspace = true }
krew-config = { workspace = true }
krew-llm = { workspace = true }
krew-tools = { workspace = true }
krew-storage = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", default-features = false, features = ["derive", "help", "usage", "std"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
textwrap = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
two-face = { workspace = true }
similar = { workspace = true }
diffy = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
krew-config = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
static_vcruntime = "3"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", default-features = false }
