[package]
name = "krew-core"
version = "0.4.2"
edition = "2024"

[dependencies]
krew-llm = { workspace = true }
krew-tools = { workspace = true }
krew-storage = { workspace = true }
krew-config = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
