[package]
name = "krew-llm"
version = "0.12.2"
edition = "2024"

[dependencies]
krew-config = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
