[package]
name = "krew-tools"
version = "0.11.12"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dunce = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
http = { workspace = true }
rmcp = { workspace = true }
futures = { workspace = true }
krew-config = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
htmd = { workspace = true }

[dev-dependencies]
tempfile = "3"
